--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.7.0",
+    "markdown-it": "^14.1.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "sanitize-html": "^2.13.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   },
