--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.12"
+    "@cloudflare/workers-types": "^4.20240423.0",
+    "@tailwindcss/typography": "^0.5.12",
+    "wrangler": "^3.52.0"
   }
 }
